# Inference_example

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
configs/: benchmark.yaml  hardware.8gb.yaml  sglang.qwen3-0.6b.yaml  sglang.qwen3-1.7b.yaml
docs/: HARDWARE_TUNING.md  RESULTS_TEMPLATE.md
docs/sample_reports/: optimization_steps.yaml  sglang_benchmark.json  sglang_benchmark.md  triton_kernel_benchmark.json  triton_kernel_benchmark.md
docs/sample_reports/optimization/: optimization_summary.md
prompts/: chat_prompts.yaml
scripts/: bench_sglang.py  bench_triton.py  serve_sglang.ps1  serve_sglang.sh
src/inference_lab/: __init__.py  cli.py  config.py  hardware.py  metrics.py  optimization_report.py  prompts.py  reports.py  sglang_client.py  system_requirements.py
src/inference_lab/kernels/: __init__.py  benchmarks.py  ops.py
tests/: test_cli.py  test_config.py  test_hardware.py  test_kernels.py  test_metrics.py  test_optimization_report.py  test_project_metadata.py  test_prompts.py  test_reports.py  test_system_requirements.py
