[project]
name = "sglang-triton-inference-lab"
version = "0.1.0"
description = "CUDA-first SGLang serving and Triton kernel benchmark lab."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Inference Lab" }]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
cuda = [
    "sglang[srt]>=0.5.2",
    "triton>=3.1.0; platform_system != 'Windows'",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
inference-lab = "inference_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "cuda: requires a CUDA-capable GPU",
]
